# Codeguard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  DECISIONS.md  Dockerfile  HANDOFF.md  LICENSE  README.en.md  README.md  docker-compose.yml
services/agent/: council_graph.json  council_graph.mermaid  pyproject.toml  visualize_graph.py
services/agent/config/: false-positive-rules.yaml
services/agent/evals/: README.md  __init__.py  archive.py  dataset.py  matcher.py  metrics.py  profiles.py  profiles.yaml  report.py  runner.py  schema.py  tool_usage.py
services/agent/legacy/: test_fp_filter.py
services/agent/tests/: test_aggregation.py  test_aggregation_synthesis.py  test_archive.py  test_candidate_dedup.py  test_candidate_tag_resolution.py  test_candidate_tag_resolution_rules.py  test_concurrency.py  test_config_settings.py  test_context_provider_ast.py  test_context_rules.py  test_council_judge.py  test_council_metrics.py  test_council_models.py  test_dataset.py  test_diff_parse.py  test_discovery_tools.py  test_engines.py  test_eval_runner_identity.py  test_evidence_agent.py  test_evidence_models.py  test_evidence_planner.py  test_evidence_rules.py  test_fp_filter.py  test_graph_orchestration.py  test_graph_phase5b.py  test_knowledge_rules.py  test_large_diff_graph.py  test_large_diff_policy.py  test_llm_client.py  test_matcher.py  test_metrics.py  test_observability.py  test_profiles.py  test_prompt_contracts.py  test_report_views.py  test_reviewer_stage.py  test_risk_routing.py  test_risk_rule_features.py  test_risk_rules.py  (+8 more)
(+409 files in other folders)
