[project]
name = "codeguard-agent"
version = "0.1.0"
description = "Codeguard Agent —— AI 代码审查的 Python 服务核心"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0",
    # LLM 相关依赖:mock 模式下不会真正导入,接入真实模型时才需要
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
]

[project.scripts]
codeguard = "codeguard_agent.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/codeguard_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
